// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`storage > getKeysPaged 1`] = `
[
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000050280441b6d213b590a46ab2621aa2ac8d938cccf3b1c58f7c85ea9cffcef6b3b3c7d9e3f5ec88887e11121a0470effe45280fe0639f040d000000",
    {
      "free": 120800000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510002fb7384852a2f20c1eef0b1d31b30b2112d62de8da5c03dbeca0a08babafe12beebedd648c80e0cc2d388d51c354ceffe45280fe0639f040d000000",
    {
      "free": 200000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100032a92b0874b73712e5ad58abce721d8ff756a738d21206cda2584c521beb0f28b6107847c5ebbacee10d2e1f7f067effe45280fe0639f040d000000",
    {
      "free": 426998085808,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510003be8ce38c03a9c7b39f5c3587af36506019249dcd117a20929c2c910d75c038e27ee34027dd34d594bb43533bee4ceffe45280fe0639f040d000000",
    {
      "free": 100000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000632ae68892ff43602adf66c0e542326e5834f582c10eb8404dd80b1d7a8e59a7f9d46159a75c01b024c3e9272575deffe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100069a1de98dc6338885e7fd7b2b5c263cb1be21ccdbe81dd4dec96c8296476f6eb59f7a3e54dbde4855af52a0b42c2e80bfde4608947768010002020d000000",
    {
      "free": 1100000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100080a87684fe705a78064c1359dca78343e069e11831c143bdb8fe1da4cad11d3ff9e1bdc0c68ddb3b6c2c50382ca64effe45280fe0639f040d000000",
    {
      "free": 350000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100081b17ec99b5fcc7865469fbd8f58ae6e4f1ee3edf0b28f17345da484c4f3026dc31448c6db6f785ce0f4dcddeb242effe45280fe0639f040d000000",
    {
      "free": 100000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510009178620ff3a4e9bb4fc35298614a03424559311d15e0bef83c9aa54723b6020136d17ffded2a0cbcd65ff50e1497fc483de2de1246ea70002",
    {
      "free": 2522375571,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510009178620ff3a4e9bb4fc35298614a03424559311d15e0bef83c9aa54723b6020136d17ffded2a0cbcd65ff50e1497feffe45280fe0639f040d000000",
    {
      "free": 10000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
]
`;

exports[`storage > getKeysPaged 2`] = `
[
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000ac60ab1bc16b50b1f1a881e649d761e18e32927f5032831c0ee0e736f92312cf126f68d1c09e09e1018a405573565effe45280fe0639f040d000000",
    {
      "free": 270000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000bc29faea2bb782e21153c43b269a834c43b5b96fb3a2ef4d08a2c928ee4eb4b0ad148617f0e8ac4164d12dbc4767feffe45280fe0639f040d000000",
    {
      "free": 250000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000d54ac85f33a606a1c33d8f63b24eccad79305c426abeada1de13b485647960cad43f8213c4e33860587ea15921d4fc483de2de1246ea70002",
    {
      "free": 827477094,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000dbe84cc5962ebdd0f51e682e710f078d66f63d8bca636568e772f1ba4176f4bf1f86ede0737e8f5380c299eacf60eeffe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000ecf64b61d3a029aabe16faaf5205ccae63a1fccb0a355ca47c4e6445e334c05a2b82346a11f34b0c0f532df9aad25effe45280fe0639f040d000000",
    {
      "free": 74000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f36df473571e04b3c61991b72655efa602f59cbf65748816cae835339ccaa65f438fc2b4edf3d173042b3342c2e50effe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f58134fa59dba231909b76f4d729e466e24d96f94c1c58d8b25d2652fb649455bd53ccb0fdc25ee0ccc3ff230fa1aeffe45280fe0639f040d000000",
    {
      "free": 110000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f708db95b9b22fe2154203f6eec5df27d2b994f0b4e9e52800d4601bcc440e8d24a82c0837c3f7a3e56e86c217d14d67c5ba80ba065480001",
    {
      "free": 6588010433285,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f708db95b9b22fe2154203f6eec5df27d2b994f0b4e9e52800d4601bcc440e8d24a82c0837c3f7a3e56e86c217d14effe45280fe0639f040d000000",
    {
      "free": 78827912167,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51001049344e49f94037279af9f287333e184c8d500fefa6801930082edc43c9126ec1de6193bd1fa1a75f1c8191a32125effe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
]
`;

exports[`storage > getKeysPagedAt 1`] = `
[
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000050280441b6d213b590a46ab2621aa2ac8d938cccf3b1c58f7c85ea9cffcef6b3b3c7d9e3f5ec88887e11121a0470effe45280fe0639f040d000000",
    {
      "free": 120800000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510002fb7384852a2f20c1eef0b1d31b30b2112d62de8da5c03dbeca0a08babafe12beebedd648c80e0cc2d388d51c354ceffe45280fe0639f040d000000",
    {
      "free": 200000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100032a92b0874b73712e5ad58abce721d8ff756a738d21206cda2584c521beb0f28b6107847c5ebbacee10d2e1f7f067effe45280fe0639f040d000000",
    {
      "free": 426998085808,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510003be8ce38c03a9c7b39f5c3587af36506019249dcd117a20929c2c910d75c038e27ee34027dd34d594bb43533bee4ceffe45280fe0639f040d000000",
    {
      "free": 100000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000632ae68892ff43602adf66c0e542326e5834f582c10eb8404dd80b1d7a8e59a7f9d46159a75c01b024c3e9272575deffe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100069a1de98dc6338885e7fd7b2b5c263cb1be21ccdbe81dd4dec96c8296476f6eb59f7a3e54dbde4855af52a0b42c2e80bfde4608947768010002020d000000",
    {
      "free": 1100000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100080a87684fe705a78064c1359dca78343e069e11831c143bdb8fe1da4cad11d3ff9e1bdc0c68ddb3b6c2c50382ca64effe45280fe0639f040d000000",
    {
      "free": 350000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d5100081b17ec99b5fcc7865469fbd8f58ae6e4f1ee3edf0b28f17345da484c4f3026dc31448c6db6f785ce0f4dcddeb242effe45280fe0639f040d000000",
    {
      "free": 100000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510009178620ff3a4e9bb4fc35298614a03424559311d15e0bef83c9aa54723b6020136d17ffded2a0cbcd65ff50e1497fc483de2de1246ea70002",
    {
      "free": 2522375571,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d510009178620ff3a4e9bb4fc35298614a03424559311d15e0bef83c9aa54723b6020136d17ffded2a0cbcd65ff50e1497feffe45280fe0639f040d000000",
    {
      "free": 10000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
]
`;

exports[`storage > getKeysPagedAt 2`] = `
[
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000ac60ab1bc16b50b1f1a881e649d761e18e32927f5032831c0ee0e736f92312cf126f68d1c09e09e1018a405573565effe45280fe0639f040d000000",
    {
      "free": 270000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000bc29faea2bb782e21153c43b269a834c43b5b96fb3a2ef4d08a2c928ee4eb4b0ad148617f0e8ac4164d12dbc4767feffe45280fe0639f040d000000",
    {
      "free": 250000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000d54ac85f33a606a1c33d8f63b24eccad79305c426abeada1de13b485647960cad43f8213c4e33860587ea15921d4fc483de2de1246ea70002",
    {
      "free": 827477094,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000dbe84cc5962ebdd0f51e682e710f078d66f63d8bca636568e772f1ba4176f4bf1f86ede0737e8f5380c299eacf60eeffe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000ecf64b61d3a029aabe16faaf5205ccae63a1fccb0a355ca47c4e6445e334c05a2b82346a11f34b0c0f532df9aad25effe45280fe0639f040d000000",
    {
      "free": 74000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f36df473571e04b3c61991b72655efa602f59cbf65748816cae835339ccaa65f438fc2b4edf3d173042b3342c2e50effe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f58134fa59dba231909b76f4d729e466e24d96f94c1c58d8b25d2652fb649455bd53ccb0fdc25ee0ccc3ff230fa1aeffe45280fe0639f040d000000",
    {
      "free": 110000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f708db95b9b22fe2154203f6eec5df27d2b994f0b4e9e52800d4601bcc440e8d24a82c0837c3f7a3e56e86c217d14d67c5ba80ba065480001",
    {
      "free": 6588010433285,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51000f708db95b9b22fe2154203f6eec5df27d2b994f0b4e9e52800d4601bcc440e8d24a82c0837c3f7a3e56e86c217d14effe45280fe0639f040d000000",
    {
      "free": 78827912167,
      "frozen": 0,
      "reserved": 0,
    },
  ],
  [
    "0x99971b5749ac43e0235e41b0d37869188ee7418a6531173d60d1f6a82d8f4d51001049344e49f94037279af9f287333e184c8d500fefa6801930082edc43c9126ec1de6193bd1fa1a75f1c8191a32125effe45280fe0639f040d000000",
    {
      "free": 50000000000,
      "frozen": 0,
      "reserved": 0,
    },
  ],
]
`;

exports[`storage > getStorage 1`] = `1686805458374`;

exports[`storage > getStorage 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 0,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`storage > getStorage 3`] = `0`;

exports[`storage > getStorage 4`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 660000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`storage > getStorageMulti 1`] = `
[
  {
    "consumers": 1,
    "data": {
      "feeFrozen": 0,
      "free": 1176184677863301,
      "miscFrozen": 5000000000000,
      "reserved": 106200000000,
    },
    "nonce": 643,
    "providers": 2,
    "sufficients": 0,
  },
  {
    "consumers": 0,
    "data": {
      "feeFrozen": 0,
      "free": 9651859722402,
      "miscFrozen": 0,
      "reserved": 0,
    },
    "nonce": 218,
    "providers": 1,
    "sufficients": 0,
  },
  {
    "consumers": 0,
    "data": {
      "feeFrozen": 0,
      "free": 9862339957483,
      "miscFrozen": 0,
      "reserved": 0,
    },
    "nonce": 97,
    "providers": 1,
    "sufficients": 0,
  },
]
`;

exports[`storage > getStorageMulti 2`] = `
[
  {
    "consumers": 0,
    "data": {
      "feeFrozen": 0,
      "free": 10000000000000,
      "miscFrozen": 0,
      "reserved": 0,
    },
    "nonce": 0,
    "providers": 1,
    "sufficients": 0,
  },
  {
    "consumers": 0,
    "data": {
      "feeFrozen": 0,
      "free": 10000000000000,
      "miscFrozen": 0,
      "reserved": 0,
    },
    "nonce": 0,
    "providers": 1,
    "sufficients": 0,
  },
  {
    "consumers": 0,
    "data": {
      "feeFrozen": 0,
      "free": 10000000000000,
      "miscFrozen": 0,
      "reserved": 0,
    },
    "nonce": 0,
    "providers": 1,
    "sufficients": 0,
  },
]
`;

exports[`storage > subscription 1`] = `
[
  [
    1686805458374,
  ],
]
`;

exports[`storage > subscription 3`] = `
[
  [
    1686805470374,
  ],
]
`;
